implement symmetric authentication